# Varuna

./: README.md
DOCS/: COMPELTE DETAILS.md
NEW/: F  MPU6050  htmlviewer.html (1).txt  readme.md
TEMP/: Readme.md
varuna-os/: CMakeLists.txt  main.cpp  resources.qrc
varuna-os/qml/: Main.qml  Theme.qml  qmldir
varuna-os/qml/components/: BootScreen.qml  ControlInput.qml  CustomButton.qml  CustomProgressBar.qml  DataTable.qml  Header.qml  HealthItem.qml  InfoCard.qml  LogLine.qml  NavigationBar.qml  ScreenContainer.qml  SectionTitle.qml  SensorCard.qml  StatusBadge.qml  WarningBanner.qml
varuna-os/qml/screens/: CalibrateScreen.qml  ExportScreen.qml  HistoryScreen.qml  LogsScreen.qml  OverviewScreen.qml  SensorsScreen.qml  SystemScreen.qml  TerminalScreen.qml
website related/: IN.html  maindashboard.html
